<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragPropLiqFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:splitMotionEvents="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nomeDoFluidoText"
                        style="@style/TextoGrangeTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0"
                        android:padding="8sp"
                        android:text="@string/nome_do_fluido"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider12"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="0"
                        android:background="?android:attr/listDivider" />

                    <EditText
                        android:id="@+id/nomeDoFluidoEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="2"
                        android:gravity="center|center_horizontal"
                        android:hint="@string/digite_aqui_o_nome_do_fluido"
                        android:includeFontPadding="true"
                        android:inputType="textPersonName"
                        android:padding="8sp"
                        android:textSize="18sp"
                         />

                    <RadioGroup
                        android:id="@+id/radioGroupTipoFluido"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp">

                        <RadioButton
                            android:id="@+id/radioButtonLiq"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/liquido" />

                        <RadioButton
                            android:id="@+id/radioButtonGas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gas" />

                        <RadioButton
                            android:id="@+id/radioButtonMetalLiq"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/metal_liquido" />
                    </RadioGroup>

                    <View
                        android:id="@+id/dividerGordao6"
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="24dp"
                        android:layout_weight="0"
                        android:background="?android:attr/listDivider" />

                </LinearLayout>

                <TextView
                    android:id="@+id/dadosOperacaotextView"
                    style="@style/TextoGrangeTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="8sp"
                    android:text="@string/dados_de_operacao"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginEnd="2dp"
                    android:background="?android:attr/listDivider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/props1RecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8sp"
                    android:paddingBottom="8sp" />

            </LinearLayout>

            <View
                android:id="@+id/dividerGordao8"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tempMediaTextView"
                    style="@style/TextoGrangeTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="8dp"
                    android:text="@string/temperatura_m_dia"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginEnd="2dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="true"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageButton
                        android:id="@+id/tempMediaButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginRight="8dp"
                        android:onClick="calcTempButton"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_refresh_black_24dp" />

                    <TextView
                        android:id="@+id/tempMediaValorTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:layout_marginLeft="16sp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/interrogacoes"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tempMediaUnidadeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8sp"
                        android:layout_marginLeft="8sp"
                        android:layout_weight="2"
                        android:gravity="start|center_vertical"
                        android:text="@string/kelvin_sigla" />
                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginEnd="2dp"
                    android:background="?android:attr/listDivider" />

            </LinearLayout>

            <View
                android:id="@+id/dividerGordao7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/propsFluidoTextView"
                style="@style/TextoGrangeTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:gravity="start"
                android:padding="8sp"
                android:text="@string/propriedades_do_fluido"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginEnd="2dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/props2RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp"
                android:paddingTop="8sp"
                android:paddingBottom="8sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="80dp"
                android:adjustViewBounds="true"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>